Nutch Change Log

Release nutchgora - Current Development

* NUTCH-1298 Pass numTasks to FetcherJob (Dan Rosher via ferdy)

* NUTCH-1289 In distributed mode URL's are not partitioned (Dan Rosher, ferdy)

* NUTCH-1292 Better exception logging and debugging during fetch. (ferdy)

* NUTCH-1263 FetcherJob must put 'fetchTime' on input (ferdy)

* NUTCH-1296 nutchgora fetcher does not show correct 'threads' and 'resuming' properties (ferdy)

* NUTCH-1295 nutchgora restlet dependencies failing when remote repos is down (ferdy)

* NUTCH-965 Skip parsing for truncated documents (alexis, lewismc, ferdy)

* NUTCH-1287 Upgrade to hsqldb 2.2.8 (ferdy)

* NUTCH-1280 language-identifier should have option to use detected value by Tika even when uncertain (ferdy)

* NUTCH-1246 Upgrade to Hadoop 1.0.0 (lewismc)

* NUTCH-1279 Check if limit has been reached in GeneraterReducer must be the first check performance-wise. (ferdy)

* NUTCH-1255 Change ivy.xml of all plugins to remove "nutch.root" property (ferdy)

* NUTCH-1189 add commented out default settings to gora.properties file (lewismc, Ferdy)

* NUTCH-1138 remove LogUtil from trunk and nutchgora (lewismc)

* NUTCH-1237 Improve javac arguements for more verbose output (lewismc)

* NUTCH-1217 Update NOTICE.txt to drop some copyrights (lewismc)

* NUTCH-1216 Add trivial comment to lib/native/README.txt (lewismc)

* NUTCH-1198 Less verbose logging when unmapped mimetypes are trying to be parsed. (ferdy)

* NUTCH-1196 Update job should impose an upper limit on the number of inlinks (nutchgora) (ferdy)

* NUTCH-1185 Decrease solr.commit.size to 250 (markus)

* NUTCH-1172 AbstractNuchTest should have a generic testdir instead of specific 'inject' dir (ferdy)

* NUTCH-1192 Add '/runtime' to svn ignore (ferdy)

* NUTCH-1191 Port NUTCH-1102 to nutchgora - consistent use of fetcher.parse (ferdy)

* NUTCH-1187 Port NUTCH-1028 to nutchgora - log parser keys (ferdy)
