@@ -2,6 +2,8 @@ Nutch Change Log
 
 Release nutchgora - Current Development
 
+* NUTCH-1302 nutchgora job failures should be noticed by submitter (ferdy)
+
 * NUTCH-1298 Pass numTasks to FetcherJob (Dan Rosher via ferdy)
 
 * NUTCH-1289 In distributed mode URL's are not partitioned (Dan Rosher, ferdy)
